# tinySimpleScript

./: .gitignore  CMakeLists.txt  common.cpp  common.hpp  commonHighLevel.cpp  commonHighLevel.hpp  edisonHighLevel.cpp  edisonHighLevel.hpp  lcdHighLevel.cpp  lcdHighLevel.hpp  main.cpp  notepad++_user_lang_tinySimpleScript.xml  readme.md
scripts/: breakout.tass  dialer.tass  etest1.tass  gitterT.tass  test1.tass  test10.tass  test12.tass  test2.tass  test3.tass  test4.tass  test5.tass  test6.tass  test7.tass  test8.tass  test9.tass  wallTime.tass
